# civilrecon

./: Dockerfile  LICENSE  app.py  pyproject.toml
static/: main.css
templates/: base.html  map.html  report.html  report_saved.html
