[tool.poetry]
name = "civilrecon"
version = "0.1.0"
description = ""
authors = ["Dániel Gulyás <dani@jazzware.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
